--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@
 	        		<li><a href="https://github.com/wadamomo">github.com/wadamomo</a></li>
 				</ul>
 			</footer>
+			<script src="index.js"></script>
 		</body>
 	</html>
