--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
+#birthdaymessage {
+    font-size: 4em;
+}
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
