Change location and path for js file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<script src="confetti.js"></script>
+			<script src="../confetti.js"></script>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
@@ -26,6 +26,6 @@
 	        		<li><a href="https://github.com/wadamomo">github.com/wadamomo</a></li>
 				</ul>
 			</footer>
-			<script src="index.js"></script>
+			<script src="../index.js"></script>
 		</body>
 	</html>
