--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,6 @@
 	        		<li><a href="https://github.com/wadamomo">github.com/wadamomo</a></li>
 				</ul>
 			</footer>
-			<script src="/index.js"></script>
+			<script src="index.js"></script>
 		</body>
 	</html>
