Add iify script inside html file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<script src="/confetti.js"></script>
+			<script>
+				(function() {
+					console.log('yo')
+				})()
+			</script>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
