--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,44 @@
 
 <head>
 	<title>{{ page.title }}</title>
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
+<body>
+	<nav>
+		<ul>
+			<li>
+				<a href="/">Home</a>
+			</li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/cv">CV</a></li>
+			<li><a href="/blog">Blog</a></li>
+		</ul>
+	</nav>
+	<div class="container">
+
+		{{ content }}
+
+	</div>
+
+	<!-- /.container -->
+	<footer>
+		<ul>
+			<li>
+				<a href="mailto:william.adamowicz@gmail.com">email</a>
+			</li>
+			<li>
+				<a href="https://github.com/wadamomo">github.com/wadamomo</a>
+			</li>
+		</ul>
+	</footer>
+	<script>
+			(function () {
+				console.log('hello from body')
+			})()
+	</script>
+	<canvas id="my-canvas"></canvas>
 	<script>
 		window.onload = function () {
 			window.ConfettiGenerator = function (params) {
@@ -179,51 +217,12 @@
 				}
 			}
 
-			console.log('getting context')
+			console.log('getting confetti context')
 			var confettiSettings = { target: 'my-canvas' };
 			var confetti = new window.ConfettiGenerator(confettiSettings);
 			confetti.render();
 		};
 	</script>
-	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
-</head>
-
-<body>
-	<nav>
-		<ul>
-			<li>
-				<a href="/">Home</a>
-			</li>
-			<li><a href="/about">About</a></li>
-			<li><a href="/cv">CV</a></li>
-			<li><a href="/blog">Blog</a></li>
-		</ul>
-	</nav>
-	<div class="container">
-
-		{{ content }}
-
-	</div>
-	<canvas id="my-canvas"></canvas>
-
-	<!-- /.container -->
-	<footer>
-		<ul>
-			<li>
-				<a href="mailto:william.adamowicz@gmail.com">email</a>
-			</li>
-			<li>
-				<a href="https://github.com/wadamomo">github.com/wadamomo</a>
-			</li>
-		</ul>
-	</footer>
-	<script>
-			(function () {
-				console.log('hello from body')
-			})()
-	</script>
-	
 </body>
 
 </html>
